--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "netlify-deploy": "next build && next export"
+    "build": "next build && next export",
+    "start": "next start"
   },
   "dependencies": {
     "axios": "^0.27.2",
